--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,10 @@
 :root {
   --pagebg: #FFF;
   --main: #111;
-  --bglink: rgba(51,51,51);
+  --bglink: rgb(51, 51, 51);
   --darkbg: #FFF;
   --lightbg: #000;
-  --lighter: #8257e6;
+  --lighter: #3333;
 }
 
 * {
@@ -72,7 +72,7 @@ ul li:hover a {
   color: var(--darkbg);
   font-size: 36px;
   font-weight: bold;
-  text-shadow: 1px 1px 1px var(--lighter);
+  text-shadow: 1px 1px 1px var(--lightbg);
   margin-bottom: 30px;
 }
 
@@ -109,8 +109,9 @@ h2 {
 .item--color,
 .item--genre {
   font-size: 13px;
-  color: var(--lighter);
+  color: var(--main);
   margin-bottom: 3px;
+  
 }
 
 footer {
